package client;

public class Request {

	public long id;
	public String event;

}
