package client;

public class Response {
	public boolean isSuccessful;
	public String result;
}
