package expression;

public enum Type {
	DIGIT,
	OPERATOR,
	EQUALS,
	ACTION,
	CLEAR
}
