package expression.actions;

public class Clear {
}
