package expression.actions;

public class Equals {
}
