package expression.actions.erroractions;

public class DiscardAction implements ErrorAction {
}
