package expression.actions.erroractions;

public interface ErrorAction {
}
