package expression.actions.erroractions;

public class ResetAction implements ErrorAction {
}
